--- a/client/src/components/CollegeCard/CollegeCard.css
+++ b/client/src/components/CollegeCard/CollegeCard.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   box-shadow: 0px 4px 64px rgba(0, 0, 0, 0.1);
   border-radius: 20px;
+  cursor: pointer;
 }
 .college_card_first{
   flex: 1;
